@@ -26,6 +26,7 @@ import de.tum.in.www1.artemis.AbstractSpringIntegrationBambooBitbucketJiraTest;
 import de.tum.in.www1.artemis.domain.Course;
 import de.tum.in.www1.artemis.domain.Exercise;
 import de.tum.in.www1.artemis.domain.Lecture;
+import de.tum.in.www1.artemis.domain.User;
 import de.tum.in.www1.artemis.domain.enumeration.DisplayPriority;
 import de.tum.in.www1.artemis.domain.enumeration.SortingOrder;
 import de.tum.in.www1.artemis.domain.exam.Exam;
@@ -63,6 +64,8 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     private Validator validator;
 
+    private User student1;
+
     private static final int MAX_POSTS_PER_PAGE = 20;
 
     @BeforeEach
@@ -73,9 +76,10 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
         database.addUsers(5, 5, 0, 1);
 
-        // initialize test setup and get all existing posts (there are 4 posts with lecture context, 4 with exercise context, 3 with course-wide context and 3 with chat session
-        // initialized): 14
-        // posts in total
+        student1 = database.getUserByLogin("student1");
+
+        // initialize test setup and get all existing posts
+        // (there are 4 posts with lecture context, 4 with exercise context, 3 with course-wide context and 3 with chat session initialized): 14 posts in total
         existingPostsAndChats = database.createPostsWithinCourse();
 
         existingPosts = existingPostsAndChats.stream().filter(post -> post.getChatSession() == null).collect(Collectors.toList());
@@ -122,6 +126,7 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
         postToSave.setExercise(exercise);
 
         Post createdPost = request.postWithResponseBody("/api/courses/" + courseId + "/posts", postToSave, Post.class, HttpStatus.CREATED);
+        database.assertSensitiveInformationHidden(createdPost);
         checkCreatedPost(postToSave, createdPost);
         assertThat(existingExercisePosts).hasSize(postRepository.findPostsByExerciseId(exerciseId, null, null, null, null).size() - 1);
         verify(groupNotificationService, times(1)).notifyAllGroupsAboutNewPostForExercise(createdPost, course);
@@ -148,6 +153,7 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
         postToSave.setLecture(lecture);
 
         Post createdPost = request.postWithResponseBody("/api/courses/" + courseId + "/posts", postToSave, Post.class, HttpStatus.CREATED);
+        database.assertSensitiveInformationHidden(createdPost);
         checkCreatedPost(postToSave, createdPost);
         assertThat(existingLecturePosts).hasSize(postRepository.findPostsByLectureId(lectureId, null, null, null, null).size() - 1);
         verify(groupNotificationService, times(1)).notifyAllGroupsAboutNewPostForLecture(createdPost, course);
@@ -161,6 +167,7 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
         postToSave.setCourseWideContext(existingCourseWidePosts.get(0).getCourseWideContext());
 
         Post createdPost = request.postWithResponseBody("/api/courses/" + courseId + "/posts", postToSave, Post.class, HttpStatus.CREATED);
+        database.assertSensitiveInformationHidden(createdPost);
         checkCreatedPost(postToSave, createdPost);
 
         List<Post> updatedCourseWidePosts = postRepository.findPostsForCourse(courseId, null, null, null, null, null).stream().filter(post -> post.getCourseWideContext() != null)
@@ -190,6 +197,7 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
         postToSave.setCourseWideContext(CourseWideContext.ANNOUNCEMENT);
 
         Post createdPost = request.postWithResponseBody("/api/courses/" + courseId + "/posts", postToSave, Post.class, HttpStatus.CREATED);
+        database.assertSensitiveInformationHidden(createdPost);
         postToSave.setDisplayPriority(DisplayPriority.PINNED);
         checkCreatedPost(postToSave, createdPost);
 
@@ -243,7 +251,7 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
         postToSave.setContent("");
 
         Post createdPost = request.postWithResponseBody("/api/courses/" + courseId + "/posts", postToSave, Post.class, HttpStatus.CREATED);
-
+        database.assertSensitiveInformationHidden(createdPost);
         Post expectedPost = new Post();
         expectedPost.setId(createdPost.getId());
         expectedPost.setAuthor(createdPost.getAuthor());
@@ -291,7 +299,7 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
         Post postToCheck = new Post();
         postToCheck.setTitle("Title Post");
 
-        List<Post> similarPosts = request.postWithResponseBody("/api/courses/" + courseId + "/posts/similarity-check", postToCheck, List.class, HttpStatus.OK);
+        List<Post> similarPosts = request.postListWithResponseBody("/api/courses/" + courseId + "/posts/similarity-check", postToCheck, Post.class, HttpStatus.OK);
         assertThat(similarPosts).hasSize(TOP_K_SIMILARITY_RESULTS);
     }
 
@@ -315,6 +323,7 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
         Post postToUpdate = editExistingPost(existingPosts.get(0));
 
         Post updatedPost = request.putWithResponseBody("/api/courses/" + courseId + "/posts/" + postToUpdate.getId(), postToUpdate, Post.class, HttpStatus.OK);
+        database.assertSensitiveInformationHidden(updatedPost);
         assertThat(updatedPost).isEqualTo(postToUpdate);
     }
 
@@ -328,6 +337,7 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
         postToUpdate.setLecture(this.existingLecturePosts.get(0).getLecture());
 
         Post updatedPost = request.putWithResponseBody("/api/courses/" + courseId + "/posts/" + postToUpdate.getId(), postToUpdate, Post.class, HttpStatus.OK);
+        database.assertSensitiveInformationHidden(updatedPost);
         assertThat(updatedPost).isEqualTo(postToUpdate);
     }
 
@@ -341,6 +351,7 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
         postToUpdate.setExercise(this.existingExercisePosts.get(0).getExercise());
 
         Post updatedPost = request.putWithResponseBody("/api/courses/" + courseId + "/posts/" + postToUpdate.getId(), postToUpdate, Post.class, HttpStatus.OK);
+        database.assertSensitiveInformationHidden(updatedPost);
         assertThat(updatedPost).isEqualTo(postToUpdate);
     }
 
@@ -355,6 +366,7 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
         postToUpdate.setLecture(this.existingLecturePosts.get(0).getLecture());
 
         Post updatedPost = request.putWithResponseBody("/api/courses/" + courseId + "/posts/" + postToUpdate.getId(), postToUpdate, Post.class, HttpStatus.OK);
+        database.assertSensitiveInformationHidden(updatedPost);
         assertThat(updatedPost).isEqualTo(postToUpdate);
     }
 
@@ -367,6 +379,7 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
         postToUpdate.setCourseWideContext(CourseWideContext.RANDOM);
 
         Post updatedPost = request.putWithResponseBody("/api/courses/" + courseId + "/posts/" + postToUpdate.getId(), postToUpdate, Post.class, HttpStatus.OK);
+        database.assertSensitiveInformationHidden(updatedPost);
         assertThat(updatedPost).isEqualTo(postToUpdate);
     }
 
@@ -377,6 +390,7 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
         Post postToUpdate = editExistingPost(existingPosts.get(0));
 
         Post updatedPost = request.putWithResponseBody("/api/courses/" + courseId + "/posts/" + postToUpdate.getId(), postToUpdate, Post.class, HttpStatus.OK);
+        database.assertSensitiveInformationHidden(updatedPost);
         assertThat(updatedPost).isEqualTo(postToUpdate);
 
         // update post from another student (index 1)--> forbidden
@@ -396,6 +410,7 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
         postToNotUpdate.setLecture(this.existingLecturePosts.get(0).getLecture());
 
         Post notUpdatedPost = request.putWithResponseBody("/api/courses/" + courseId + "/posts/" + postToNotUpdate.getId(), postToNotUpdate, Post.class, HttpStatus.OK);
+        database.assertSensitiveInformationHidden(notUpdatedPost);
         // no effect on post context
         assertThat(notUpdatedPost.getCourseWideContext()).isNull();
         assertThat(notUpdatedPost.getCourse()).isNull();
@@ -446,6 +461,7 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
         // change display priority to PINNED
         Post updatedPost = request.putWithResponseBodyAndParams("/api/courses/" + courseId + "/posts/" + postToPin.getId() + "/display-priority", null, Post.class, HttpStatus.OK,
                 params);
+        database.assertSensitiveInformationHidden(updatedPost);
         assertThat(updatedPost).isEqualTo(postToPin);
     }
 
@@ -472,6 +488,7 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
         // change display priority to ARCHIVED
         Post updatedPost = request.putWithResponseBodyAndParams("/api/courses/" + courseId + "/posts/" + postToArchive.getId() + "/display-priority", null, Post.class,
                 HttpStatus.OK, params);
+        database.assertSensitiveInformationHidden(updatedPost);
         assertThat(updatedPost).isEqualTo(postToArchive);
     }
 
@@ -485,6 +502,7 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
         List<Post> returnedPosts = request.getList("/api/courses/" + courseId + "/posts", HttpStatus.OK, Post.class, params);
         // get amount of posts with that certain
+        database.assertSensitiveInformationHidden(returnedPosts);
         assertThat(returnedPosts).hasSameSizeAs(existingPosts);
     }
 
@@ -497,6 +515,7 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
         params.add("courseWideContext", courseWideContext.toString());
 
         List<Post> returnedPosts = request.getList("/api/courses/" + courseId + "/posts", HttpStatus.OK, Post.class, params);
+        database.assertSensitiveInformationHidden(returnedPosts);
         // get amount of posts with that certain course-wide context
         var expectedAmountOfFetchedPosts = existingCourseWidePosts.stream().filter(coursePost -> coursePost.getCourseWideContext() == courseWideContext).count();
         assertThat(returnedPosts.size()).isEqualTo(expectedAmountOfFetchedPosts);
@@ -510,6 +529,7 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
         params.add("exerciseId", exerciseId.toString());
 
         List<Post> returnedPosts = request.getList("/api/courses/" + courseId + "/posts", HttpStatus.OK, Post.class, params);
+        database.assertSensitiveInformationHidden(returnedPosts);
         // get amount of posts with that certain course-wide context
         assertThat(returnedPosts).hasSameSizeAs(existingExercisePosts);
     }
@@ -522,6 +542,7 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
         params.add("lectureId", lectureId.toString());
 
         List<Post> returnedPosts = request.getList("/api/courses/" + courseId + "/posts", HttpStatus.OK, Post.class, params);
+        database.assertSensitiveInformationHidden(returnedPosts);
         // get amount of posts with that certain course-wide context
         assertThat(returnedPosts).hasSameSizeAs(existingLecturePosts);
     }
@@ -574,8 +595,9 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
         params.add("filterToOwn", "true");
 
         List<Post> returnedPosts = request.getList("/api/courses/" + courseId + "/posts", HttpStatus.OK, Post.class, params);
+        database.assertSensitiveInformationHidden(returnedPosts);
         // get posts of current user and compare
-        assertThat(returnedPosts).isEqualTo(existingPosts.stream().filter(post -> "student1".equals(post.getAuthor().getLogin())).collect(Collectors.toList()));
+        assertThat(returnedPosts).isEqualTo(existingPosts.stream().filter(post -> student1.getId().equals(post.getAuthor().getId())).toList());
     }
 
     @Test
@@ -587,7 +609,7 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
         params.add("pagingEnabled", "true"); // search by text, only available in course discussions page where paging is enabled
 
         List<Post> returnedPosts = request.getList("/api/courses/" + courseId + "/posts", HttpStatus.OK, Post.class, params);
-
+        database.assertSensitiveInformationHidden(returnedPosts);
         assertThat(returnedPosts).isEqualTo(existingPosts.stream().filter(post -> post.getId() == 1).collect(Collectors.toList()));
     }
 
@@ -608,6 +630,7 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
         params.add("sortingOrder", sortingOrder.toString());
 
         List<Post> returnedPosts = request.getList("/api/courses/" + courseId + "/posts", HttpStatus.OK, Post.class, params);
+        database.assertSensitiveInformationHidden(returnedPosts);
         existingPosts.sort(Comparator.comparing(Post::getCreationDate).reversed());
 
         assertThat(returnedPosts).isEqualTo(existingPosts);
@@ -630,6 +653,7 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
         params.add("sortingOrder", sortingOrder.toString());
 
         List<Post> returnedPosts = request.getList("/api/courses/" + courseId + "/posts", HttpStatus.OK, Post.class, params);
+        database.assertSensitiveInformationHidden(returnedPosts);
         existingPosts.sort(Comparator.comparing(Post::getCreationDate));
 
         assertThat(returnedPosts).isEqualTo(existingPosts);
@@ -647,6 +671,7 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
         params.add("size", String.valueOf(MAX_POSTS_PER_PAGE));
 
         List<Post> returnedPosts = request.getList("/api/courses/" + courseId + "/posts", HttpStatus.OK, Post.class, params);
+        database.assertSensitiveInformationHidden(returnedPosts);
         assertThat(returnedPosts.size()).isIn(returnedPosts.size(), MAX_POSTS_PER_PAGE);
     }
 
